--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,72 @@
+.answerchoice {
+	border: 1px solid black;
+  border-radius: 5%;
+	width: 40%;
+	color: black;
+  text-align: center;
+  margin: 10px auto;
+  font-size: 20px;
+  background-color: gray;
+
+}
+
+img {
+  max-height: 250px;
+  width: auto;
+}
+
+#answer {
+  text-align: center;
+
+}
+
+#question {
+  text-align: center;
+  font-weight: bold;
+}
+
+#reset {
+  visibility: visible;
+}
+
 body {
-    font-size: 18px;
-    color: black;
-    padding: 0 auto;
-    margin: 0 auto;
+  background-image: url("../images/cover.jpg");
+  background-size: cover;
+  font-family: 'Karla', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  color:black;
+  font-weight: bolder;
+  padding: 20px;
+  font-size: 45px;
+  border: 2px solid black;
+  background-color: gray;
+}
+
+p {
+  margin: 10px;
+  font-weight: bold;
+  color:black;
+  font-size: 20px;
+}
+
+h2, h3 {
+  margin: 30px;
+  font-weight: bold;
+}
+
+.container {
+  margin: 10px auto;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 2px solid #21afb9;
+  height: 500px;
+  width: 60%;
+  text-align: center;
+}
+
+.button {
+  position: relative;
+  bottom: -150px;
 }
