--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,20 @@ body
   background-attachment: fixed;
   height: auto;
 }
+.container
+{
+	margin-top: 50px;
+	text-align: center;
+	height: 100%;
+  width: 700px;
+  color: white;
+}
+
+
+@media screen and (max-width:640px){
+	.container{
+		width: 500px;
+		margin-top: 200px;
+		size: 200%;
+	}	
+}
