--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,11 @@ body
   width: 700px;
   color: white;
 }
+.thisOption:hover{
+	background-color: gray;
+	color: white;
+	padding: 10px;
+}
 
 
 @media screen and (max-width:640px){
